# limud

./: README.md  stack.yaml
analysis/: hebrew.cabal
analysis/app/: Main.hs
tanach.us/: Amos.acc.txt  Chronicles_1.acc.txt  Chronicles_2.acc.txt  Daniel.acc.txt  Deuteronomy.acc.txt  Ecclesiastes.acc.txt  Esther.acc.txt  Exodus.acc.txt  Ezekiel.acc.txt  Ezra.acc.txt  Genesis.acc.txt  Habakkuk.acc.txt  Haggai.acc.txt  Hosea.acc.txt  Isaiah.acc.txt  Jeremiah.acc.txt  Job.acc.txt  Joel.acc.txt  Jonah.acc.txt  Joshua.acc.txt  Judges.acc.txt  Kings_1.acc.txt  Kings_2.acc.txt  Lamentations.acc.txt  Leviticus.acc.txt  Malachi.acc.txt  Micah.acc.txt  Nahum.acc.txt  Nehemiah.acc.txt  Numbers.acc.txt  Obadiah.acc.txt  Proverbs.acc.txt  Psalms.acc.txt  Ruth.acc.txt  Samuel_1.acc.txt  Samuel_2.acc.txt  Song_of_Songs.acc.txt  TanachHeader.acc.txt  TanachIndex.acc.txt  Zechariah.acc.txt  (+1 more)
